a2/consumer/manifests/api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consumer-api
  namespace: leaf-image-management-system
spec:
  selector:
    app: consumer-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
